--- a/development/signature_viz_updated.Rmd
+++ b/development/signature_viz_updated.Rmd
@@ -11,8 +11,12 @@ library(bulletxtrctr)
 bullet_palette3 <- hcl.colors(3, palette = "Zissou 1")
 bullet_palette5 <- hcl.colors(5, palette = "Zissou 1")
 bullet_palette6 <- hcl.colors(6, palette = "Zissou 1")
+blue_palette3 <- c("royalblue3", "midnightblue", "cadetblue3")
+orange_palette3 <- c("darkorange3","saddlebrown", "orange")
+pink_palette3 <- c("salmon3", "tomato4", "lightsalmon")
 ```
 
+# BLUE  
 ```{r}
 blue_sigs <- readRDS("/Volumes/databuddy/Variability/data/Blue_all_sigs_updated.rda")
 
@@ -90,6 +94,10 @@ bl_b6 <- bl_b6 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
   lands
 }))
 
+
+blue_sigs_aligned <- rbind(bl_b1, bl_b2, bl_b3, bl_b4, bl_b5, bl_b6)
+saveRDS(blue_sigs_aligned,"../data/variability_scans/blue_aligned_sigs.rda")
+
 ```
 
 ```{r}
@@ -146,55 +154,302 @@ blb6_long %>%
  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
  geom_line(aes(x = x_aligned, y = sig1)) +
  theme_bw() + 
+ scale_color_manual(name = "Bullet", values =bullet_palette3) + 
+  labs(title = "Barrel Blue Land B-6", x = "Relative X Location", y = "Signature Height")
+```
+
+# PINK  
+```{r}
+pink_sigs <- readRDS("/Volumes/databuddy/Variability/data/Pink_all_sigs_updated.rda")
+
+pink_sigs <- pink_sigs %>% select(source, operator, round, machine, barrel, bullet, land, scan_id, sigs)
+
+pink_gt <- read_csv("../data/variability_scans/pink_gt_update.csv")
+pink_sigs <- full_join(pink_sigs, pink_gt)
+
+pink_ops <- read_csv("../data/variability_scans/operators_blind.csv")
+pink_sigs <- left_join(pink_sigs, pink_ops)
+#head(pink_sigs)
+```
+
+```{r}
+bl_p1 <- pink_sigs %>% filter(unique_id == "BL P-1")
+bl_p1 <- bl_p1 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p1$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+bl_p2 <- pink_sigs %>% filter(unique_id == "BL P-2")
+bl_p2 <- bl_p2 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p2$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+
+
+
+bl_p3 <- pink_sigs %>% filter(unique_id == "BL P-3")
+bl_p3 <- bl_p3 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p3$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+
+bl_p4 <- pink_sigs %>% filter(unique_id == "BL P-4")
+bl_p4 <- bl_p4 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p4$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+bl_p5 <- pink_sigs %>% filter(unique_id == "BL P-5")
+bl_p5 <- bl_p5 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p5$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+bl_p6 <- pink_sigs %>% filter(unique_id == "BL P-6")
+bl_p6 <- bl_p6 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_p6$sigs[[1]]$sig, row$sig) 
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+pink_sigs_aligned <- rbind(bl_p1, bl_p2, bl_p3, bl_p4, bl_p5, bl_p6)
+saveRDS(pink_sigs_aligned,"../data/variability_scans/pink_aligned_sigs.rda")
+
+```
+
+```{r}
+blp1_long <- bl_p1 %>% unnest(sigs_aligned)
+blp2_long <- bl_p2 %>% unnest(sigs_aligned)
+blp3_long <- bl_p3 %>% unnest(sigs_aligned)
+blp4_long <- bl_p4 %>% unnest(sigs_aligned)
+blp5_long <- bl_p5 %>% unnest(sigs_aligned)
+blp6_long <- bl_p6 %>% unnest(sigs_aligned)
+
+blp1_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blp2_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blp3_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blp4_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blp5_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blp6_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
  scale_color_manual(name = "Bullet", values = bullet_palette3)
 ```
 
+
 ```{r}
-blb6_long %>%
+blp3_long %>%
  #filter(operator != "Mya") %>%
  ggplot() +
  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(round)), alpha = 0.7) +
  #geom_line(aes(x = x_aligned, y = sig1)) +
  theme_bw() + 
- scale_color_manual(name = "Round", values = bullet_palette6) + 
+ scale_color_manual(name = "Bullet", values = bullet_palette6) + 
   facet_grid(operator~bullet)
 
-blb6_long %>%
-  filter(operator == "Anyesha", round == "Round 1", bullet == "Bullet 2") %>%
-  ggplot() +
-  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(machine)), alpha = 0.7) +
-  #geom_line(aes(x = x_aligned, y = sig1)) +
-   theme_bw() + 
-  scale_color_manual(name = "Machine", values = bullet_palette3[c(1,3)])
+```
 
-blb6_long %>%
-  filter(operator == "Mya", (round == "Round 3" | round == "Round 4"), bullet == "Bullet 1") %>%
-  ggplot() +
-  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(machine), linetype = factor(round)), alpha = 0.7) +
-  #geom_line(aes(x = x_aligned, y = sig1)) +
-   theme_bw() + 
-  scale_color_manual(name = "Machine", values = bullet_palette3[c(1,3)])
 
+# ORANGE  
+```{r}
+orange_sigs <- readRDS("/Volumes/databuddy/Variability/data/Orange_all_sigs_updated.rda")
+
+orange_sigs <- orange_sigs %>% select(source, operator, round, machine, barrel, bullet, land, scan_id, sigs)
+
+orange_gt <- read_csv("../data/variability_scans/orange_gt_update.csv")
+orange_sigs <- full_join(orange_sigs, orange_gt)
+
+orange_ops <- read_csv("../data/variability_scans/operators_blind.csv")
+orange_sigs <- left_join(orange_sigs, orange_ops)
+#head(orange_sigs)
+```
+
+```{r}
+bl_o1 <- orange_sigs %>% filter(unique_id == "BL O-1")
+bl_o1 <- bl_o1 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_o1$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+bl_o2 <- orange_sigs %>% filter(unique_id == "BL O-2")
+bl_o2 <- bl_o2 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_o2$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+
+
+
+bl_o3 <- orange_sigs %>% filter(unique_id == "BL O-3")
+bl_o3 <- bl_o3 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_o3$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+
+bl_o4 <- orange_sigs %>% filter(unique_id == "BL O-4")
+bl_o4 <- bl_o4 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_o4$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+bl_o5 <- orange_sigs %>% filter(unique_id == "BL O-5")
+bl_o5 <- bl_o5 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  align <- sig_align(bl_o5$sigs[[1]]$sig, row$sig)
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+bl_o6 <- orange_sigs %>% filter(unique_id == "BL O-6")
+bl_o6 <- bl_o6 %>% mutate(sigs_aligned = purrr::map(sigs, .f = function(row){
+  ## grab one of connor's scans as base, this BL has tank rash/breakoff on 2 of 3 bullets
+  align <- sig_align(bl_o6$sigs[[57]]$sig, row$sig) 
+  lands <- align$lands
+  lands <- lands[!is.na(lands$sig1),]
+  lands$x_aligned <- 1:(dim(lands)[1])
+  lands
+}))
+
+
+orange_sigs_aligned <- rbind(bl_o1, bl_o2, bl_o3, bl_o4, bl_o5, bl_o6)
+saveRDS(orange_sigs_aligned,"../data/variability_scans/orange_aligned_sigs.rda")
 
 ```
 
 ```{r}
-blb2_long %>%
+blo1_long <- bl_o1 %>% unnest(sigs_aligned)
+blo2_long <- bl_o2 %>% unnest(sigs_aligned)
+blo3_long <- bl_o3 %>% unnest(sigs_aligned)
+blo4_long <- bl_o4 %>% unnest(sigs_aligned)
+blo5_long <- bl_o5 %>% unnest(sigs_aligned)
+blo6_long <- bl_o6 %>% unnest(sigs_aligned)
+
+blo1_long %>%
  #filter(operator != "Mya") %>%
  ggplot() +
- geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(round)), alpha = 0.7) +
- #geom_line(aes(x = x_aligned, y = sig1)) +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
  theme_bw() + 
- scale_color_manual(name = "Round", values = bullet_palette6) + 
-  facet_grid(operator~bullet)
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
 
-blb2_long %>%
-  filter(operator == "Mark", (round == "Round 4" | round == "Round 5"), bullet == "Bullet 2") %>%
-  ggplot() +
-  geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(machine), linetype = factor(round)), alpha = 0.7) +
-  #geom_line(aes(x = x_aligned, y = sig1)) +
-   theme_bw() + 
-  scale_color_manual(name = "Machine", values = bullet_palette3[c(1,3)])
+blo2_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blo3_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blo4_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blo5_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values = bullet_palette3)
+
+blo6_long %>%
+ #filter(operator != "Mya") %>%
+ ggplot() +
+ geom_line(aes(x = x_aligned, y = sig2, group = scan_id, color = factor(bullet)), alpha = 0.7) +
+ geom_line(aes(x = x_aligned, y = sig1)) +
+ theme_bw() + 
+ scale_color_manual(name = "Bullet", values =bullet_palette3) + 
+  labs(title = "Barrel Orange Land O-6", x = "Relative X Location", y = "Signature Height")
 ```
-
 
