--- a/development/plots-and-models-diss.Rmd
+++ b/development/plots-and-models-diss.Rmd
@@ -38,6 +38,37 @@ all_aligned <- rbind(blue_aligned, orange_aligned, pink_aligned)
 all_aligned <- all_aligned %>% filter(barrel != "Barrel Green")
 ```
 
+Quick example of non-aligned, then sig-aligned.  
+
+```{r}
+sig1 <- blue_aligned %>% filter(unique_id == "BL B-6", operator == "Anyesha", 
+                        machine == "Sneox1", round == "Round 1",
+                        bullet == "Bullet 1")
+sig2 <- blue_aligned %>% filter(unique_id == "BL B-6", operator == "Anyesha", 
+                                machine == "Sneox1", round == "Round 1", 
+                                bullet == "Bullet 3")
+
+sigs_nonalign <- ggplot() + 
+  geom_line(aes(x = x, y = sig), data = sig1$sigs[[1]], color = "cadetblue3") + 
+  geom_line(aes(x = x, y = sig), data = sig2$sigs[[1]], color = "midnightblue") + 
+  theme_bw() + 
+  labs(x = expression(paste("Relative Location x"[i], " (", mu, "m)")),
+       y = expression(paste("Signature Height z"[i], " (", mu, "m)")), 
+       title = "Two known-match signatures, raw extracted signatures")
+
+sigs_align <- ggplot() + 
+  geom_line(aes(x = x_aligned, y = sig1), data = sig2$sigs_aligned[[1]], color = "cadetblue3") + 
+  geom_line(aes(x = x_aligned, y = sig2), data = sig2$sigs_aligned[[1]], color = "midnightblue") + 
+  theme_bw() + 
+  labs(x = expression(paste("Relative Location x"[i], " (", mu, "m)")),
+       y = expression(paste("Signature Height z"[i], " (", mu, "m)")), 
+       title = "Two known-match signatures, coaligned in the x direction")
+
+grid.arrange(sigs_nonalign, sigs_align, nrow = 2)
+```
+
+
+
 ```{r}
 
 land_examples <- c("BL B-6", "BL P-4", "BL O-2")
@@ -311,14 +342,6 @@ all_aligned_long %>%
        subtitle = "to balance number of points by location when modeling")
 ```
 
-
-Make a plot of one of the lands and the following steps:
-1. All aligned
-2. Trimmed (loose "tails" greyed out in background?)  
-3. Subsampled at each 100th X location - points in color, sigs in grey in background  
-
-
-Do the following: 
 
 ## Signature Modeling, including results and figures  
 
@@ -713,14 +736,21 @@ blue_df <- blue_df %>%
                                  "Bullet-Operator", "Bullet-Machine", "Operator-Machine", 
                                  "Operator-Bullet-Machine", "Residual")))
 write_csv(blue_df, "/Volumes/databuddy/Variability/data/blue_signature_model_results.csv")
+```
 
+Blue's viz
+```{r}
 blue_df %>%
   mutate(unique_id = factor(unique_id, levels = c("BL B-1", "BL B-2", "BL B-3", "BL B-4", "BL B-5", "BL B-6", "Pooled"), 
                             labels = c("B-1", "B-2", "B-3", "B-4", "B-5", "B-6", "Pooled"))) %>%
+  group_by(unique_id, grp) %>%
+  mutate(sigma_mean = mean(sdcor)) %>%
+  ungroup() %>%
   ggplot() + 
   geom_boxplot(aes(x = factor(unique_id), y = sdcor), fill = "steelblue", alpha = 0.7) + 
   #geom_point(aes(x = factor(unique_id), y = sdcor, color = factor(phase_id)), alpha = 0.6) + 
   #scale_color_manual(name = "Phase", values = zissou_palette10) + 
+  geom_point(aes(x = factor(unique_id), y = sigma_mean), pch = 23, color = "black", fill = "white") + 
   facet_wrap(~grp,  nrow = 2) + 
   theme_bw() + 
   labs(x = "Barrel-Land", y = expression(paste("Estimated sigma value (", mu, "m)")), 
@@ -841,13 +871,21 @@ orange_df <- orange_df %>%
                                  "Operator-Bullet-Machine", "Residual")))
 
 write_csv(orange_df, "/Volumes/databuddy/Variability/data/orange_signature_model_results.csv")
+```
+
+Orange's viz
+```{r}
 orange_df %>%
   mutate(unique_id = factor(unique_id, levels = c("BL O-1", "BL O-2", "BL O-3", "BL O-4", "BL O-5", "BL O-6", "Pooled"), 
                             labels = c("O-1", "O-2", "O-3", "O-4", "O-5", "O-6", "Pooled"))) %>%
+  group_by(unique_id, grp) %>%
+  mutate(sigma_mean = mean(sdcor)) %>%
+  ungroup() %>%
   ggplot() + 
   geom_boxplot(aes(x = factor(unique_id), y = sdcor), fill = "darkorange", alpha = 0.7) + 
   #geom_point(aes(x = factor(unique_id), y = sdcor, color = factor(phase_id)), alpha = 0.6) + 
   #scale_color_manual(name = "Phase", values = zissou_palette10) + 
+  geom_point(aes(x = factor(unique_id), y = sigma_mean), pch = 23, color = "black", fill = "white") + 
   facet_wrap(~grp,  nrow = 2) + 
   theme_bw() + 
   labs(x = "Barrel-Land", y = expression(paste("Estimated sigma value (", mu, "m)")), 
@@ -971,15 +1009,21 @@ pink_df <- pink_df %>%
                                  "Operator-Bullet-Machine", "Residual")))
 
 write_csv(pink_df, "/Volumes/databuddy/Variability/data/pink_signature_model_results.csv")
+```
 
-
+Pink's viz
+```{r}
 pink_df %>%
   mutate(unique_id = factor(unique_id, levels = c("BL P-1", "BL P-2", "BL P-3", "BL P-4", "BL P-5", "BL P-6", "Pooled"), 
                             labels = c("P-1", "P-2", "P-3", "P-4", "P-5", "P-6", "Pooled"))) %>%
+  group_by(unique_id, grp) %>%
+  mutate(sigma_mean = mean(sdcor)) %>%
+  ungroup() %>%
   ggplot() + 
   geom_boxplot(aes(x = factor(unique_id), y = sdcor), fill = "salmon", alpha = 0.7) + 
   #geom_point(aes(x = factor(unique_id), y = sdcor, color = factor(phase_id)), alpha = 0.6) + 
   #scale_color_manual(name = "Phase", values = zissou_palette10) + 
+  geom_point(aes(x = factor(unique_id), y = sigma_mean), pch = 23, color = "black", fill = "white") + 
   facet_wrap(~grp,  nrow = 2) + 
   theme_bw() + 
   labs(x = "Barrel-Land", y = expression(paste("Estimated sigma value (", mu, "m)")), 
@@ -1008,11 +1052,197 @@ pink_df %>% group_by(unique_id) %>%
 ```
 
 
+Signature models without tank rash lands... 
+
+```{r}
+tank_rash_gt <- read_csv("../data/variability_scans/tank_rash_gt.csv")
+all_aligned_long <- left_join(all_aligned_long, tank_rash_gt)
+
+# we need to do new models for: 
+# orange-1
+orange_l1_long_tr <- all_aligned_long %>% 
+  filter(unique_id == "BL O-1", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+orange_l1_df_tr <- data.frame(window_size = 100) %>% ## 3 singular
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs(sig_aligned_data = orange_l1_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+# orange-4
+orange_l4_long_tr <- all_aligned_long %>% 
+  filter(unique_id == "BL O-4", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+orange_l4_df_tr <- data.frame(window_size = 100) %>% ## 4 singular
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs(sig_aligned_data = orange_l4_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+# orange-6
+orange_l6_long_tr <- all_aligned_long %>% 
+  filter(unique_id == "BL O-6", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+orange_l6_df_tr <- data.frame(window_size = 100) %>% ## bunch of issues - only 1 bullet...
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs(sig_aligned_data = orange_l6_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+# orange pooled  
+
+orange_pooled_long_tr <- all_aligned_long %>%  
+  filter(barrel == "Barrel Orange", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+orange_pooled_df_tr <- data.frame(window_size = 100) %>% ### 8 singular, 1 failed convergence
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs_pooled(sig_aligned_data = orange_pooled_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+
+orange_df_tr <- rbind(orange_l1_df_tr, orange_l4_df_tr, orange_l6_df_tr, orange_pooled_df_tr)
+orange_df_tr <- orange_df_tr %>%
+  mutate(grp = factor(grp, levels = c("bullet:fixed_BLi", "operator:fixed_BLi", 
+                                      "machine:fixed_BLi", "bullet:operator:fixed_BLi", 
+                                      "bullet:machine:fixed_BLi", "operator:machine:fixed_BLi", 
+                                      "operator:bullet:machine:fixed_BLi", "Residual"), 
+                      labels = c("Bullet", "Operator", "Machine", 
+                                 "Bullet-Operator", "Bullet-Machine", "Operator-Machine", 
+                                 "Operator-Bullet-Machine", "Residual")))
+orange_df <- read_csv("/Volumes/databuddy/Variability/data/orange_signature_model_results.csv")
+orange_df$tr_model <- F
+orange_df_tr$tr_model <- T
+
+orange_df_2 <- rbind(orange_df, orange_df_tr)
+
+orange_df_2 <- orange_df_2 %>%
+  mutate(unique_id = factor(unique_id, 
+                            levels = c("BL O-1", "BL O-2", "BL O-3", 
+                                       "BL O-4", "BL O-5", "BL O-6", "Pooled"), 
+                            labels = c("O-1", "O-2", "O-3", 
+                                       "O-4", "O-5", "O-6", "Pooled"))) %>%
+  mutate(grp = factor(grp, levels = c("Bullet", "Operator", "Machine", 
+                                 "Bullet-Operator", "Bullet-Machine", "Operator-Machine", 
+                                 "Operator-Bullet-Machine", "Residual")))
+
+orange_df_2 %>%
+  group_by(unique_id, grp,tr_model) %>%
+  mutate(sigma_mean = mean(sdcor)) %>%
+  ungroup() %>%
+  #filter(unique_id %in% c("O-1", "O-4", "O-6", "Pooled")) %>%
+  ggplot() + 
+  geom_boxplot(aes(x = factor(unique_id), y = sdcor, 
+                   fill = factor(tr_model), color = factor(tr_model)), 
+               alpha = 0.7, position = "identity") + 
+  scale_fill_manual(name = "Tank Rash Filtered", values = c(NA, "darkorange")) + 
+  scale_color_manual(name = "Tank Rash Filtered", values = c("grey60", "black")) + 
+  geom_vline(xintercept = c("O-1", "O-4", "O-6", "Pooled"), lty = 2, color = "grey70") + 
+  #geom_point(aes(x = factor(unique_id), y = sdcor, color = factor(phase_id)), alpha = 0.6) + 
+  #scale_color_manual(name = "Phase", values = zissou_palette10) + 
+  geom_point(aes(x = factor(unique_id), y = sigma_mean, color = factor(tr_model)), pch = 23, fill = "white") +
+  facet_wrap(~grp,  nrow = 2) + 
+  theme_bw() + 
+  labs(x = "Barrel-Land", y = expression(paste("Estimated sigma value (", mu, "m)")), 
+       title = "Barrel Orange Signature-Level Model Parameter Estimates", 
+       subtitle = "window size = 100, phases = 10") + 
+  theme(plot.subtitle = element_text(face = "italic"))
+
+
+
+
+
+
+# pink-6
+pink_l6_long_tr <- all_aligned_long %>% 
+  filter(unique_id == "BL P-6", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+pink_l6_df_tr <- data.frame(window_size = 100) %>% ## 3 singular
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs(sig_aligned_data = pink_l6_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+
+# pink pooled
+
+pink_pooled_long_tr <- all_aligned_long %>%  
+  filter(barrel == "Barrel Pink", keep_x == T, tank_rash == F) %>%
+  mutate(fixed_BLi = paste0(unique_id, "-", x_aligned))
+
+pink_pooled_df_tr <- data.frame(window_size = 100) %>% ### 8 singular, 1 failed convergence
+  mutate(sampling_ests = purrr::map(.x = window_size, .f = function(x){
+    subsample_sigs_pooled(sig_aligned_data = pink_pooled_long_tr, n_phases = 10, window_size = x)
+  })) %>% 
+  unnest(cols = c(sampling_ests)) %>% 
+  unnest(cols = c(sigmas))
+
+
+pink_df_tr <- rbind(pink_l6_df_tr, pink_pooled_df_tr)
+pink_df_tr <- pink_df_tr %>%
+  mutate(grp = factor(grp, levels = c("bullet:fixed_BLi", "operator:fixed_BLi", 
+                                      "machine:fixed_BLi", "bullet:operator:fixed_BLi", 
+                                      "bullet:machine:fixed_BLi", "operator:machine:fixed_BLi", 
+                                      "operator:bullet:machine:fixed_BLi", "Residual"), 
+                      labels = c("Bullet", "Operator", "Machine", 
+                                 "Bullet-Operator", "Bullet-Machine", "Operator-Machine", 
+                                 "Operator-Bullet-Machine", "Residual")))
+pink_df <- read_csv("/Volumes/databuddy/Variability/data/pink_signature_model_results.csv")
+pink_df$tr_model <- F
+pink_df_tr$tr_model <- T
+
+pink_df_2 <- rbind(pink_df, pink_df_tr)
+
+pink_df_2 <- pink_df_2 %>%
+  mutate(unique_id = factor(unique_id, 
+                            levels = c("BL P-1", "BL P-2", "BL P-3", 
+                                       "BL P-4", "BL P-5", "BL P-6", "Pooled"), 
+                            labels = c("P-1", "P-2", "P-3", 
+                                       "P-4", "P-5", "P-6", "Pooled"))) %>%
+  mutate(grp = factor(grp, levels = c("Bullet", "Operator", "Machine", 
+                                 "Bullet-Operator", "Bullet-Machine", "Operator-Machine", 
+                                 "Operator-Bullet-Machine", "Residual")))
+
+pink_df_2 %>%
+  group_by(unique_id, grp,tr_model) %>%
+  mutate(sigma_mean = mean(sdcor)) %>%
+  ungroup() %>%
+  #filter(unique_id %in% c("O-1", "O-4", "O-6", "Pooled")) %>%
+  ggplot() + 
+  geom_boxplot(aes(x = factor(unique_id), y = sdcor, 
+                   fill = factor(tr_model), color = factor(tr_model)), 
+               alpha = 0.7, position = "identity") + 
+  scale_fill_manual(name = "Tank Rash Filtered", values = c(NA, "salmon")) + 
+  scale_color_manual(name = "Tank Rash Filtered", values = c("grey60", "black")) + 
+  geom_vline(xintercept = c("P-6", "Pooled"), lty = 2, color = "grey70") + 
+  #geom_point(aes(x = factor(unique_id), y = sdcor, color = factor(phase_id)), alpha = 0.6) + 
+  #scale_color_manual(name = "Phase", values = zissou_palette10) + 
+  geom_point(aes(x = factor(unique_id), y = sigma_mean, color = factor(tr_model)), pch = 23, fill = "white") +
+  facet_wrap(~grp,  nrow = 2) + 
+  theme_bw() + 
+  labs(x = "Barrel-Land", y = expression(paste("Estimated sigma value (", mu, "m)")), 
+       title = "Barrel Pink Signature-Level Model Parameter Estimates", 
+       subtitle = "window size = 100, phases = 10") + 
+  theme(plot.subtitle = element_text(face = "italic"))
+
+```
+
 ## Pairwise modeling, including results and figures
 Define pairwise grouping structure.  
 
 
 Blue!!!  
+Data prep
 ```{r}
 blue_pairwise <- readRDS("/Volumes/databuddy/Variability/data/blue_pairwise_all.rda")
 blue_gt <- read_csv("../data/variability_scans/blue_gt_update.csv")
@@ -1067,7 +1297,10 @@ blue_pairwise <- blue_pairwise %>%
          operator_pairing_fixed = ifelse(operator_pairing %in% operator_pairings, operator_pairing, operator_pairing_alt), 
          machine_pairing_fixed = ifelse(machine_pairing %in% machine_pairings, machine_pairing, machine_pairing_alt), 
          unique_id_pairing_fixed = ifelse(unique_id_pairing %in% unique_id_pairings, unique_id_pairing, unique_id_pairing_alt))
+```
 
+Models and summaries
+```{r}
 model_pairwise_blue <- lmer(rfscore~unique_id_pairing_fixed + 
                               (1|bullet_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:unique_id_pairing_fixed) + 
@@ -1108,6 +1341,7 @@ model_sigmas_blue_ds <- model_sigmas_blue_ds %>% mutate(model = "Different Sourc
 
 
 Orange!!! 
+Data prep
 ```{r}
 orange_pairwise <- readRDS("/Volumes/databuddy/Variability/data/orange_pairwise_all.rda")
 orange_gt <- read_csv("../data/variability_scans/orange_gt_update.csv")
@@ -1165,7 +1399,10 @@ orange_pairwise <- orange_pairwise %>%
          operator_pairing_fixed = ifelse(operator_pairing %in% operator_pairings, operator_pairing, operator_pairing_alt), 
          machine_pairing_fixed = ifelse(machine_pairing %in% machine_pairings, machine_pairing, machine_pairing_alt), 
          unique_id_pairing_fixed = ifelse(unique_id_pairing %in% unique_id_pairings, unique_id_pairing, unique_id_pairing_alt))
+```
 
+Models and summaries
+```{r}
 model_pairwise_orange <- lmer(rfscore~unique_id_pairing_fixed + 
                               (1|bullet_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:unique_id_pairing_fixed) + 
@@ -1205,12 +1442,8 @@ model_sigmas_orange_ds <- model_sigmas_orange_ds %>% mutate(model = "Different S
 ```
 
 
-
-
-
-
-
 Pink!!! 
+Data prep 
 ```{r}
 pink_pairwise <- readRDS("/Volumes/databuddy/Variability/data/pink_pairwise_all.rda")
 pink_gt <- read_csv("../data/variability_scans/pink_gt_update.csv")
@@ -1268,7 +1501,10 @@ pink_pairwise <- pink_pairwise %>%
          operator_pairing_fixed = ifelse(operator_pairing %in% operator_pairings, operator_pairing, operator_pairing_alt), 
          machine_pairing_fixed = ifelse(machine_pairing %in% machine_pairings, machine_pairing, machine_pairing_alt), 
          unique_id_pairing_fixed = ifelse(unique_id_pairing %in% unique_id_pairings, unique_id_pairing, unique_id_pairing_alt))
+```
 
+Models and summaries
+```{r}
 model_pairwise_pink <- lmer(rfscore~unique_id_pairing_fixed + 
                               (1|bullet_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:unique_id_pairing_fixed) + 
@@ -1343,6 +1579,7 @@ model_sigmas_all  %>%
   mutate(grp = factor(grp, levels = c("Bullet", "Operator", "Machine","Bullet-Operator", "Bullet-Machine", 
                                  "Operator-Machine", "Bullet-Operator-Machine", "Residual"))) %>% arrange(barrel, model, grp)
 ```
+
 Two model variations to try: 
 
 1. Models without tank rash lands for Orange and Pink.  
@@ -1483,13 +1720,30 @@ model_sigmas_TR <-model_sigmas_TR %>%
 model_sigmas_TR  %>%
   mutate(grp = factor(grp, levels = c("Bullet", "Operator", "Machine","Bullet-Operator", "Bullet-Machine", 
                                  "Operator-Machine", "Bullet-Operator-Machine", "Residual"))) %>% arrange(barrel, model, grp)
+
+
+
 ```
 
 Now visualize the tank rash-no tank rash differences! 
+
 ```{r}
 model_sigmas_all_2 <- rbind(model_sigmas_all, model_sigmas_TR)
 
 write_csv(model_sigmas_all_2, "/Volumes/databuddy/Variability/data/pairwise_model_results_all_TR.csv")
+
+model_sigmas_all_2 %>% group_by(tank_rash, model, barrel) %>%
+  #filter(grp == "Residual") %>%
+  summarise(sigma_repeat = round(sdcor[grp == "Residual"], 5), 
+            sigma_reprod = round(sqrt(sdcor[grp == "Bullet"]^2 + 
+                                   sdcor[grp == "Operator"]^2 + 
+                                   sdcor[grp == "Machine"]^2 + 
+                                   sdcor[grp == "Bullet-Machine"]^2 + 
+                                   sdcor[grp == "Operator-Machine"]^2 + 
+                                   sdcor[grp == "Bullet-Operator"]^2 + 
+                                   sdcor[grp == "Bullet-Operator-Machine"]^2), 5)) %>%
+  arrange(barrel, model, tank_rash)
+
 
 
 model_sigmas_all_2 %>%
@@ -1501,13 +1755,18 @@ model_sigmas_all_2 %>%
                             labels = c("All Lands Included", "Tank Rash Lands Excluded"))) %>%
   ggplot() + 
   geom_point(aes(x = grp, y = sdcor, color = model, pch = model), size = 3) + 
-  facet_grid(barrel~tank_rash, scale = "free_y") + 
+  #facet_grid(barrel~tank_rash, scale = "free_y") + 
+  facet_grid(barrel~tank_rash) + 
   scale_color_manual(name = "Pairing IDs Used", values = c("goldenrod", "grey60", "purple4")) + 
   scale_shape_manual(name = "Pairing IDs Used", values = c(8, 17, 15)) + 
-  theme_bw() #+ 
-  theme(axis.text.x = element_text(angle = 30))
-
+  theme_bw() + 
+  labs(x = "Effect type", y = expression(paste("Estimated sigma value (in ", mu, "m)")), 
+       title = "Pairwise model estimates by barrel and model",
+       subtitle = "with and without tank rash lands included") + 
+  theme(plot.subtitle = element_text(face = "italic"))
+  
 ```
+
 
 2. Models with 10% of comparisons (randomly sampled) so that we can try for confidence intervals.  
 
@@ -1520,7 +1779,7 @@ model_pairwise_blue_sub <- lmer(rfscore~unique_id_pairing_fixed +
                               (1|bullet_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|bullet_pairing_fixed:operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed), 
-                            data = blue_pairwise)
+                            data = blue_pairwise %>% sample_frac(0.1))
 
 model_pairwise_blue_ss_sub <- lmer(rfscore~unique_id_pairing_fixed + 
                               (1|bullet_pairing_fixed:unique_id_pairing_fixed) + 
@@ -1530,7 +1789,7 @@ model_pairwise_blue_ss_sub <- lmer(rfscore~unique_id_pairing_fixed +
                               (1|bullet_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|bullet_pairing_fixed:operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed), 
-                            data = blue_pairwise %>% filter(ground_truth == "Same Source"))
+                            data = blue_pairwise %>% filter(ground_truth == "Same Source") %>% sample_frac(0.1))
 
 model_pairwise_blue_ds_sub <- lmer(rfscore~unique_id_pairing_fixed + 
                               (1|bullet_pairing_fixed:unique_id_pairing_fixed) + 
@@ -1540,14 +1799,19 @@ model_pairwise_blue_ds_sub <- lmer(rfscore~unique_id_pairing_fixed +
                               (1|bullet_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed) + 
                               (1|bullet_pairing_fixed:operator_pairing_fixed:machine_pairing_fixed:unique_id_pairing_fixed), 
-                            data = blue_pairwise %>% filter(ground_truth == "Different Source"))
+                            data = blue_pairwise %>% filter(ground_truth == "Different Source") %>% sample_frac(0.1))
 
-model_sigmas_blue <- as.data.frame(VarCorr(model_pairwise_blue))[,c("grp", "sdcor")]
-model_sigmas_blue_ss <- as.data.frame(VarCorr(model_pairwise_blue_ss))[,c("grp", "sdcor")]
-model_sigmas_blue_ds <- as.data.frame(VarCorr(model_pairwise_blue_ds))[,c("grp", "sdcor")]
-model_sigmas_blue <- model_sigmas_blue %>% mutate(model = "All", barrel = "Blue")
-model_sigmas_blue_ss <- model_sigmas_blue_ss %>% mutate(model = "Same Source", barrel = "Blue")
-model_sigmas_blue_ds <- model_sigmas_blue_ds %>% mutate(model = "Different Source", barrel = "Blue")
+model_sigmas_blue_sub <- as.data.frame(VarCorr(model_pairwise_blue_sub))[,c("grp", "sdcor")]
+model_sigmas_blue_ss_sub <- as.data.frame(VarCorr(model_pairwise_blue_ss_sub))[,c("grp", "sdcor")]
+model_sigmas_blue_ds_sub <- as.data.frame(VarCorr(model_pairwise_blue_ds_sub))[,c("grp", "sdcor")]
+model_sigmas_blue_sub <- model_sigmas_blue_sub %>% mutate(model = "All", barrel = "Blue")
+model_sigmas_blue_ss_sub <- model_sigmas_blue_ss_sub %>% mutate(model = "Same Source", barrel = "Blue")
+model_sigmas_blue_ds_sub <- model_sigmas_blue_ds_sub %>% mutate(model = "Different Source", barrel = "Blue")
+
+blue_ss_boot_ci_sub <- confint(model_pairwise_blue_ss_sub, parm = "theta_", level = 0.95, method = "boot")
+blue_ds_boot_ci_sub <- confint(model_pairwise_blue_ds_sub, parm = "theta_", level = 0.95, method = "boot")
+blue_boot_ci_sub <- confint(model_pairwise_blue_sub, parm = "theta_", level = 0.95, method = "boot")
+# 
 
 ```
 
@@ -1855,13 +2119,13 @@ FIND POTENTIAL TANK RASH SCANS AND VISUALIZE
 ```{r}
 # first, most egregious: orange land 6, bullets 2 and 3.
 o6_bullets <- all_aligned %>% 
-  filter(unique_id == "BL O-6", operator == "Allison", round == "Round 1", machine == "Sneox1") %>% pull(source)
+  filter(unique_id == "BL O-6", operator == "Connor", round == "Round 1", machine == "Sneox1") %>% pull(source)
 
 o4_bullets <- all_aligned %>% 
-  filter(unique_id == "BL O-4", operator == "Allison", round == "Round 1", machine == "Sneox1") %>% pull(source)
+  filter(unique_id == "BL O-4", operator == "Connor", round == "Round 1", machine == "Sneox1") %>% pull(source)
 
 o1_bullets <- all_aligned %>% 
-  filter(unique_id == "BL O-1", operator == "Allison", round == "Round 1", machine == "Sneox1") %>% pull(source)
+  filter(unique_id == "BL O-1", operator == "Connor", round == "Round 1", machine == "Sneox1") %>% pull(source)
 
 orange_bullets <- data.frame(source = c(o6_bullets, o4_bullets, o1_bullets), 
                              unique_id = rep(c("BL O-6", "BL O-4", "BL O-1"), each = 3), 
@@ -1872,10 +2136,10 @@ orange_bullets
 
 # next, barrel pink lands 2 and 6
 p6_bullets <- all_aligned %>% 
-  filter(unique_id == "BL P-6", operator == "Allison", round == "Round 1", machine == "Sneox1") %>% pull(source)
+  filter(unique_id == "BL P-6", operator == "Connor", round == "Round 1", machine == "Sneox1") %>% pull(source)
 
 p2_bullets <- all_aligned %>% 
-  filter(unique_id == "BL P-2", operator == "Allison", round == "Round 1", machine == "Sneox1") %>% pull(source)
+  filter(unique_id == "BL P-2", operator == "Connor", round == "Round 1", machine == "Sneox1") %>% pull(source)
 
 pink_bullets <- data.frame(source = c(p6_bullets,p2_bullets), 
                              unique_id = rep(c("BL P-6", "BL P-2"), each = 3), 
@@ -1900,7 +2164,7 @@ x3ptools::image_x3p(tank_rash_x3ps$x3p[[6]], file = "../images/orange-bullet3-la
 # orange land 1:
 x3ptools::image_x3p(tank_rash_x3ps$x3p[[7]])
 x3ptools::image_x3p(tank_rash_x3ps$x3p[[8]])
-x3ptools::image_x3p(tank_rash_x3ps$x3p[[9]], file = "../images/orange-bullet3-land1")
+x3ptools::image_x3p(tank_rash_x3ps$x3p[[9]])
 
 # pink land 6:
 x3ptools::image_x3p(tank_rash_x3ps$x3p[[10]])
@@ -1920,8 +2184,22 @@ tank_rash_gt <- data.frame(barrel = rep(c("Barrel Blue", "Barrel Orange", "Barre
 write_csv(tank_rash_gt, "../data/variability_scans/tank_rash_gt.csv")
 
 
-#filename <- "../images/name_here.png"
-#image_x3p(x3p, file = filename, size = c(3500, 1500), zoom = 0.5)
+x3p <- tank_rash_x3ps$x3p[[2]]
+filename <- "../images/tank-rash-example1.png"
+x3ptools::image_x3p(x3p, file = filename, size = c(3500, 1500), zoom = 0.5)
+
+x3p <- tank_rash_x3ps$x3p[[1]]
+filename <- "../images/tank-rash-comparison1.png"
+x3ptools::image_x3p(x3p, file = filename, size = c(3500, 1500), zoom = 0.5)
+
+x3p <- tank_rash_x3ps$x3p[[12]]
+filename <- "../images/tank-rash-example2.png"
+x3ptools::image_x3p(x3p, file = filename, size = c(3500, 1500), zoom = 0.5)
+
+x3p <- tank_rash_x3ps$x3p[[11]]
+filename <- "../images/tank-rash-comparison2.png"
+x3ptools::image_x3p(x3p, file = filename, size = c(3500, 1500), zoom = 0.5)
+
 
 
 ```
